// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link.Blue renders without errors 1`] = `
<DocumentFragment>
  <a
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm dialog-icon-info hover:bg-blue-700 bg-blue-600 text-white"
    href="#"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`Link.BorderedGray renders without errors 1`] = `
<DocumentFragment>
  <a
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm button hover:bg-gray-400 bg-gray-300 text-gray-800 shadow-sm
    dark:bg-neutral-600 dark:text-gray-100 hover:dark:bg-neutral-500 ring-1 ring-gray-400 shadow-sm dark:ring-0
    disabled:ring-gray-400 disabled:dark:ring-neutral-500"
    href="#"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`Link.Default renders without errors 1`] = `
<DocumentFragment>
  <a
    class="link"
    href="#"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`Link.Fancy renders without errors 1`] = `
<DocumentFragment>
  <a
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm bg-gray-300 hover:bg-brand-200 dark:bg-neutral-600
    hover:dark:bg-brand:400 text-gray-800 dark:text-white text-center"
    href="#"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`Link.Gray renders without errors 1`] = `
<DocumentFragment>
  <a
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm button hover:bg-gray-400 bg-gray-300 text-gray-800 shadow-sm
    dark:bg-neutral-600 dark:text-gray-100 hover:dark:bg-neutral-500"
    href="#"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`Link.Green renders without errors 1`] = `
<DocumentFragment>
  <a
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm dialog-icon-success hover:bg-green-800 bg-green-700 text-white"
    href="#"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`Link.Icon renders without errors 1`] = `
<DocumentFragment>
  <a
    aria-label="Link"
    class="icon link rounded"
    href="#"
    title="Link"
  >
    <svg
      aria-hidden="true"
      class="w-6 h-6 flex-shrink-0"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
        fill-rule="evenodd"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Link.NewTab renders without errors 1`] = `
<DocumentFragment>
  <a
    class="link"
    href="#"
    target="_blank"
  >
    Link
    <span
      title="(opens in a new tab)"
    >
      <span
        class="sr-only"
      >
        (opens in a new tab)
      </span>
      <svg
        aria-hidden="true"
        class="w-6 h-6 flex-shrink-0"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z"
        />
        <path
          d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link.Orange renders without errors 1`] = `
<DocumentFragment>
  <a
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm dialog-icon-warning hover:bg-orange-600 bg-orange-500 text-white"
    href="#"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`Link.Red renders without errors 1`] = `
<DocumentFragment>
  <a
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm dialog-icon-error hover:bg-red-800 bg-red-700 text-white"
    href="#"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`Link.Small custom variant 1`] = `
<DocumentFragment>
  <a
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm !py-1 !px-2 a dialog-icon-info hover:bg-blue-700 bg-blue-600 text-white"
    href="#"
  />
</DocumentFragment>
`;

exports[`Link.Small default variant 1`] = `
<DocumentFragment>
  <a
    class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:text-gray-500 dark:disabled:!bg-neutral-700 gap-2
    inline-flex items-center capitalize justify-center shadow-sm !py-1 !px-2 button hover:bg-gray-400 bg-gray-300 text-gray-800 shadow-sm
    dark:bg-neutral-600 dark:text-gray-100 hover:dark:bg-neutral-500 ring-1 ring-gray-400 shadow-sm dark:ring-0
    disabled:ring-gray-400 disabled:dark:ring-neutral-500 hover:bg-brand-200 dark:hover:bg-brand-400"
    href="#"
  />
</DocumentFragment>
`;
